--- a/css/style.css
+++ b/css/style.css
@@ -1,99 +1,162 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
+/* General Styles */
 body {
-    color: #fff;
-    font-family: 'Times New Roman', Times, serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-ul {
-    list-style: none;
+/* Navigation Bar */
+header {
+    background-color: #f1f1f1;
+    padding: 10px 20px;
 }
 
-a{
-    text-decoration: none;
-    color: inherit;
-}
-
-.header {
-    width: 100%;
-    height: 100vh;
-    padding: 20px;
-    
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("/images/bg.jpg");
-}
-
-.nav {
+nav {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 70px;
-}
-
-.menu {
-    display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
-.menu__item {
-    padding: 10px 15px;
-    font-size: 18px;
-    font-weight: lighter;
-    text-transform: uppercase;
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-.menu__item:hover {
-    background-color: #fff;
-    color: #000000;
+nav li {
+    display: inline-block;
+    margin-right: 20px;
 }
 
-.logo {
-    font-size: 40px;
+nav a {
+    text-decoration: none;
+    color: #333;
 }
 
-.header__text {
+nav a:hover {
+    color: #000;
+}
+
+/* Hero Section */
+.hero {
+    position: relative;
+    text-align: center;
+    padding: 100px 0;
+    background-image: url(/images/Hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 70vh;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 0 70px;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.hero h1 {
+    color: #fff;
+    font-size: 3em;
+    margin-bottom: 10px;
+}
+
+.hero p {
+    color: #fff;
+    font-size: 1.2em;
+}
+
+/* About Section */
+.about {
+    width: 1500px;
+    display: flex;
+    padding: 50px;
+    margin: 0 auto;
+}
+
+.about-image {
+    width: 600px;
+    
+}
+
+.about-content {
+    width: 50%;
+    padding-top: 200px;
+
+    padding-left: 50px;
+    margin: 0 auto;
+}
+
+.about h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+.about p {
+    font-size: 1em;
+    line-height: 1.5;
+}
+
+/* Our Products Section */
+.products {
+    text-align: center;
+    padding: 50px 0;
+    margin: 0 auto; 
+    max-width: 1500px; 
+}
+.products-2 {
+    text-align: center;
+    padding: 10px 0;
+    margin: 0 auto; 
+    max-width: 1500px; 
+}
+
+.products h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.product-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 10rem;
+}
+
+.product {
+    width: 30%;
+    margin-bottom: 20px;
+    text-align: center;
+    background-color: #333;
+    padding: 10px;
+    border-radius: 50px;
+}
+
+.product img {
+    width: 100%;
+    height: auto;
+    
+    margin-bottom: 10px;
+}
+
+.product h3 {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+}
+
+.product p {
+    font-size: 0.9em;
+}
+
+/* Footer */
+footer {
+    background-color: #f1f1f1;
+    padding: 10px 20px;
     text-align: center;
 }
 
-.header__text h3 {
-    font-size: 35px;
-    font-family: 'Smooch', cursive;
-}
-
-.header__text h1 {
-    font-size: 55px;
-    text-transform: uppercase;
-}
-
-.header__text p {
-    font-size: 18px;
-    padding: 25px 0;
-}
-
-.header__text button {
-    font-size: 18px;
-    font-weight: 500;
-    background-color: transparent;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 10px 15px;
-    border-radius: 5px;
-    border: 1px solid #fff;
-    transition: all 0,5s;
-
-}
-
-.header__text button:hover{
-    background-color: #fff;
-    color: #000000;
-    transition: all 0.6s;
+footer p {
+    margin: 0;
 }
