--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ nav a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .hero img {
@@ -67,6 +70,7 @@ nav a:hover {
     color: #fff;
     font-size: 1.2em;
 }
+
 
 /* About Section */
 .about {
@@ -99,56 +103,166 @@ nav a:hover {
     line-height: 1.5;
 }
 
-/* Our Products Section */
+/* PRODUCT SECTION */
+
+.f-products {
+    text-align: center;
+    padding: 50px 0;
+  }
+  
+  .f-products h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+  }
+  
+  .f-product-container {
+    display: flex;
+    justify-content: space-between; /* Evenly distribute products horizontally */
+    align-items: center;  /* Align product content vertically */
+    gap: 20px; /* Spacing between products */
+    width: 1500px;
+    margin: 0 auto;
+  }
+  
+  .f-product {
+    background-color: #eeeeee;
+    padding: 10px;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease;
+    width: calc(33.33% - 20px); /* Adjust width based on number of products and gap */
+  }
+  
+  .f-product:hover {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  }
+  
+  .f-product img {
+    width: 50%;
+    height: 100;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+  
+  .f-product h3 {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+  }
+  
+  .f-product p {
+    font-size: 0.9em;
+  }
+  
+
+/*Products Page */
 .products {
     text-align: center;
     padding: 50px 0;
-    margin: 0 auto; 
-    max-width: 1500px; 
-}
-.products-2 {
-    text-align: center;
-    padding: 10px 0;
-    margin: 0 auto; 
-    max-width: 1500px; 
-}
-
-.products h2 {
+  }
+  
+  .products h2 {
     font-size: 2em;
     margin-bottom: 20px;
-}
-
-.product-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: 10rem;
-}
-
-.product {
-    width: 30%;
-    margin-bottom: 20px;
-    text-align: center;
-    background-color: #333;
+  }
+  
+  .product-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Three columns of equal width */
+    gap: 20px; /* Spacing between products */
+    width: 1500px;
+    margin: 0 auto;
+  }
+  
+  .product {
+    background-color: #eeeeee;
     padding: 10px;
-    border-radius: 50px;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .product:hover {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  }
+  
+  .product img {
+    width: 100%;
+    height: 100;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+  
+  .product h3 {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+  }
+  
+  .product p {
+    font-size: 0.9em;
+  }
+  
+
+
+
+/* NEWS LETTER SECTION */
+
+
+.newsletter {
+    background-image: url(/images/2.webp);
+    padding: 50px;
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
 }
 
-.product img {
-    width: 100%;
-    height: auto;
-    
+.newsletter h2 {
+    font-size: 1.8em;
     margin-bottom: 10px;
 }
 
-.product h3 {
-    font-size: 1.2em;
-    margin-bottom: 5px;
+.newsletter p {
+    font-size: 1em;
+    margin-bottom: 20px;
 }
 
-.product p {
-    font-size: 0.9em;
+.newsletter .text-content {
+    flex: 1;
+    text-align: left;
 }
+
+.newsletter form {
+    display: flex;
+    align-items: center;
+}
+
+.newsletter input {
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.newsletter button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.newsletter button:hover {
+    background-color: #222;
+}
+
+
+
+
+
+
 
 /* Footer */
 footer {
